--- a/Document_text_verification.ipynb
+++ b/Document_text_verification.ipynb
@@ -1068,9 +1068,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the confusion matrice output information:\n",
+    "From the confusion matrice output information above:\n",
     "We found that,we had sucessfully  trained n=36 group of texts, that is 50% of our data.\n",
-    "Within 36 trained data, 20 were prediceted as IDs. 14 were correctly predicted as not IDs."
+    "Within 36 trained data, 20 were prediceted as IDs and 14 were correctly predicted as not IDs.And also 2 were predicted falsely as passport but the were actually IDs"
    ]
   },
   {
