--- a/Document_text_verification.ipynb
+++ b/Document_text_verification.ipynb
@@ -1070,7 +1070,7 @@
    "source": [
     "From the confusion matrice output information above:\n",
     "We found that,we had sucessfully  trained n=36 group of texts, that is 50% of our data.\n",
-    "Within 36 trained data, 20 were prediceted as IDs and 14 were correctly predicted as not IDs.And also 2 were predicted falsely as passport but the were actually IDs"
+    "Within 36 trained data, 20 were prediceted as IDs and 14 were correctly predicted as not IDs.And also 2 were predicted falsely as passport but they were actually IDs"
    ]
   },
   {
